[gd_scene load_steps=13 format=3 uid="uid://dhds6pwcre7mj"]

[ext_resource type="Script" uid="uid://bkf3n2otjriuo" path="res://scenes/Sounds/sound_manager.gd" id="1_7njtb"]
[ext_resource type="AudioStream" uid="uid://b0qobchiwsfyq" path="res://assets/Music/TitleScreenMusic.wav" id="2_n05hs"]
[ext_resource type="AudioStream" uid="uid://bl8o5kc3ay7a6" path="res://assets/Music/GamePlayMusic.wav" id="3_hlvcs"]
[ext_resource type="AudioStream" uid="uid://bhg2g7agwxf63" path="res://assets/Music/EndingMusic.wav" id="4_wctqq"]
[ext_resource type="AudioStream" uid="uid://de76kokmgu1be" path="res://assets/SoundEffects/Attack.wav" id="5_2k6is"]
[ext_resource type="AudioStream" uid="uid://ot7236jc550" path="res://assets/SoundEffects/ButtonSounds.wav" id="6_03a43"]
[ext_resource type="AudioStream" uid="uid://c1nn7yv3k7vd6" path="res://assets/SoundEffects/Dash.wav" id="7_fyebc"]
[ext_resource type="AudioStream" uid="uid://bqau7pq3ilke3" path="res://assets/SoundEffects/Death.wav" id="8_3hlkw"]
[ext_resource type="AudioStream" uid="uid://gdx0goacv7pt" path="res://assets/SoundEffects/Jump.wav" id="9_nvuqr"]
[ext_resource type="AudioStream" uid="uid://c1pg8kkv7b8er" path="res://assets/SoundEffects/Land.wav" id="10_s8vmy"]
[ext_resource type="AudioStream" uid="uid://uer3vg04jna5" path="res://assets/SoundEffects/LevelComplete.wav" id="11_cthi3"]
[ext_resource type="AudioStream" uid="uid://c75xtotla4svk" path="res://assets/SoundEffects/Logo.wav" id="12_ij68i"]

[node name="SoundManager" type="Node2D"]
script = ExtResource("1_7njtb")

[node name="Music" type="Node2D" parent="."]

[node name="MenuMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("2_n05hs")
volume_db = -10.0
bus = &"Music"

[node name="GameStartMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("3_hlvcs")
volume_db = -10.0
bus = &"Music"

[node name="GameEndMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("4_wctqq")
volume_db = -10.0
bus = &"Music"

[node name="SFX" type="Node2D" parent="."]

[node name="AttackSfx" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_2k6is")
volume_db = -10.0
bus = &"SFX"

[node name="ButtonSfx" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_03a43")
volume_db = -10.0
bus = &"SFX"

[node name="DashSfx" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_fyebc")
volume_db = -10.0
bus = &"SFX"

[node name="DieSfx" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("8_3hlkw")
volume_db = -10.0
bus = &"SFX"

[node name="JumpSfx" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("9_nvuqr")
volume_db = -10.0
bus = &"SFX"

[node name="LandSfx" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("10_s8vmy")
volume_db = -10.0
bus = &"SFX"

[node name="LevelFinishSfx" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("11_cthi3")
volume_db = -10.0
bus = &"SFX"

[node name="LogoSfx" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("12_ij68i")
volume_db = -10.0
bus = &"SFX"
